# ML-Boilerplate

./: .gitignore  docker-compose.yml
docker/: ml_boilerplate.Dockerfile  ml_skeleton.Dockerfile  tmp
ml_boilerplate/: pyproject.toml
ml_skeleton/: pyproject.toml
