[tool.poetry]
name = "ml_skeleton"
version = "0.1.0"
description = "The description of the package"
authors = [
    "jame-wukong <qianfan.cheng.cn@gmail.com>"
]
repository = ""
homepage = ""

readme = ["README.md"]
packages = [{include = "ml_skeleton"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"